syntax = "proto3";

package merchant;
option go_package = "./internal/merchant/proto;merchantProto";

import "google/protobuf/empty.proto";
import "validate.proto";

service MerchantService {
  // 商家入驻（注册）
  rpc MerchantRegister(MerchantRegisterRequest) returns (MerchantRegisterResponse);
  // 商家登录
  rpc MerchantLogin(MerchantLoginRequest) returns (MerchantLoginResponse);
  // 获取商家信息
  rpc GetMerchantInfo(GetMerchantInfoRequest) returns (GetMerchantInfoResponse);
  // 更新商家信息
  rpc UpdateMerchantInfo(UpdateMerchantInfoRequest) returns (CommonResponse);
  // 商家接单
  rpc AcceptOrder(AcceptOrderRequest) returns (CommonResponse);
  // 商家拒单
  rpc RejectOrder(RejectOrderRequest) returns (CommonResponse);
  // 查询商家订单列表
  rpc ListMerchantOrders(ListMerchantOrdersRequest) returns (ListMerchantOrdersResponse);
}

// 商家信息
message Merchant {
  int64 merchant_id = 1;          // 商家ID
  string name = 2;                // 商家名称
  string phone = 3;               // 商家电话
  string password = 4;            // 密码（加密后，前端不返回）
  string address = 5;             // 商家地址
  string logo = 6;                // 商家logo
  string business_hours = 7;      // 营业时间
  float score = 8;                // 商家评分（默认5.0）
  int32 order_count = 9;          // 订单数
  bool is_open = 10;              // 是否营业
  string created_at = 11;         // 创建时间
  string updated_at = 12;         // 更新时间
}

// 订单简要信息（商家端）
message MerchantOrder {
  int64 order_id = 1;             // 订单ID
  int64 user_id = 2;              // 用户ID
  string user_name = 3;           // 用户名
  string user_phone = 4;          // 用户电话
  float total_amount = 5;         // 订单总金额
  string status = 6;              // 订单状态
  string create_time = 7;         // 创建时间
  string expect_delivery_time = 8;// 预计送达时间
}

// 通用响应
message CommonResponse {
  int32 code = 1;
  string msg = 2;
}

// 商家注册请求
message MerchantRegisterRequest {
  string name = 1 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 64];
  string phone = 2 [(validate.rules).string.pattern = "^1[3-9]\\d{9}$"];
  string password = 3 [(validate.rules).string.min_len = 6, (validate.rules).string.max_len = 20];
  string address = 4 [(validate.rules).string.min_len = 5, (validate.rules).string.max_len = 255];
  string logo = 5 [(validate.rules).string.uri = true];
  string business_hours = 6 [(validate.rules).string.min_len = 5];
}

// 商家注册响应
message MerchantRegisterResponse {
  int32 code = 1;
  string msg = 2;
  int64 merchant_id = 3;
  string token = 4;
}

// 商家登录请求
message MerchantLoginRequest {
  string phone = 1 [(validate.rules).string.pattern = "^1[3-9]\\d{9}$"];
  string password = 2 [(validate.rules).string.min_len = 6, (validate.rules).string.max_len = 20];
}

// 商家登录响应
message MerchantLoginResponse {
  int32 code = 1;
  string msg = 2;
  int64 merchant_id = 3;
  string name = 4;
  string token = 5;
}

// 获取商家信息请求
message GetMerchantInfoRequest {
  int64 merchant_id = 1 [(validate.rules).int64.gt = 0];
}

// 获取商家信息响应
message GetMerchantInfoResponse {
  int32 code = 1;
  string msg = 2;
  Merchant merchant = 3;
}

// 更新商家信息请求
message UpdateMerchantInfoRequest {
  int64 merchant_id = 1 [(validate.rules).int64.gt = 0];
  string name = 2 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 64];
  string phone = 3 [(validate.rules).string.pattern = "^1[3-9]\\d{9}$"];
  string address = 4 [(validate.rules).string.min_len = 5, (validate.rules).string.max_len = 255];
  string logo = 5 [(validate.rules).string.uri = true];
  string business_hours = 6 [(validate.rules).string.min_len = 5];
  bool is_open = 7 [(validate.rules).bool.const = true];
}

// 接单请求
message AcceptOrderRequest {
  int64 order_id = 1 [(validate.rules).int64.gt = 0];
  int64 merchant_id = 2 [(validate.rules).int64.gt = 0];
}

// 拒单请求
message RejectOrderRequest {
  int64 order_id = 1 [(validate.rules).int64.gt = 0];
  int64 merchant_id = 2 [(validate.rules).int64.gt = 0];
  string reason = 3 [(validate.rules).string.min_len = 2, (validate.rules).string.max_len = 128];
}

// 查询商家订单列表请求
message ListMerchantOrdersRequest {
  int64 merchant_id = 1 [(validate.rules).int64.gt = 0];
  string status = 2;              // 订单状态（可选，空表示所有）
  int32 page = 3 [(validate.rules).int32.gte = 1];
  int32 page_size = 4 [(validate.rules).int32.gte = 10, (validate.rules).int32.lte = 100];
}

// 查询商家订单列表响应
message ListMerchantOrdersResponse {
  int32 code = 1;
  string msg = 2;
  repeated MerchantOrder orders = 3;
  int32 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}